Add magikarp_jump forms